# lst

./: .gitignore  1  AGENTS.md  ANALYSIS.md  AUTOMERGE.md  CATEGORY.md  CLAUDE.md  COMPILATION_REQUIREMENTS.md  CONFIG_SCHEMA.md  Cargo.toml  OpenCode.md  README.md  REFACTOR.md  RULES.md  SPEC.md  THEMES.md  THEMING.md  TODO.md  dist-workspace.toml  error.txt  fuzzy.md  justfile  lst-config-schema.json  lst-fixed.toml  lst-master-key  package.json  release.toml  repomix-output.xml  syncd-test.toml  test_live_updates.md
.github/workflows/: release.yml
.opencode/: opencode.db  opencode.db-shm  opencode.db-wal
apps/lst-desktop/: README.md  WAYLAND.md  build-wayland.sh  bun.lockb  error.txt  index.html  package.json  repomix-output.xml  run-wayland.sh  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/lst-desktop/src/: App.css  App.css.bak  App.tsx  App.tsx.bak  bindings.ts  index.css
apps/lst-desktop/src-tauri/: Cargo.toml  lst-master-key  tauri.conf.json  tauri.linux.conf.json  tauri.wayland.json
apps/lst-desktop/src-tauri/capabilities/: default.json
apps/lst-desktop/src-tauri/icons/: icon.icns
apps/lst-desktop/src-tauri/src/: command_server.rs  lib.rs  theme.rs
apps/lst-desktop/src/components/: CommandPalette.tsx  DailyView.tsx  FileTree.tsx  ListView.tsx  NoteView.tsx  NotesPanel.tsx  SyncStatus.tsx  TaskFilter.tsx  TaskForm.tsx  TaskItem.tsx  TaskList.tsx  ThemeSelector.tsx  VimNoteEditor.tsx
apps/lst-desktop/src/components/ui/: button.tsx  input.tsx  sidebar.tsx  table.tsx
apps/lst-desktop/src/hooks/: useTheme.ts
apps/lst-desktop/src/pages/: Index.tsx
apps/lst-desktop/src/types/: List.ts
apps/lst-mobile/: .eslintrc.cjs  README.md  README.mobile.md  debug-ios-crash.sh  debug_ios.sh  lst-master-key  package.json  static-test.html  test-ios-crash.sh  vite.config.ts
apps/lst-mobile/src/: App-debug-steps.tsx  App-minimal.tsx  App-test-tauri.tsx  App-test-theme.tsx  App.tsx  App.tsx.backup  TestApp.tsx  bindings.ts  index.css
apps/lst-mobile/src-tauri/: Cargo.toml  lst-master-key  tauri.conf.json  tauri.conf.json.backup  tauri.ios.conf.json
apps/lst-mobile/src-tauri/icons/: icon.icns
apps/lst-mobile/src-tauri/src/: auth.rs  command_server.rs  crypto.rs  database.rs  lib-minimal.rs  lib.rs  main.rs  mobile_config.rs  mobile_sync.rs  server_trigger.rs  sync.rs  sync_bridge.rs  sync_db.rs  sync_status.rs  test_compile.rs  theme.rs
apps/lst-mobile/src/components/: MobileNoteEditor.tsx  MobileNotesPanel.tsx  MobileThemeSelector.tsx  SettingsPanel.tsx  SyncStatusIndicator.tsx
apps/lst-mobile/src/components/ui/: alert.tsx  button.tsx  sidebar.tsx
apps/lst-mobile/src/hooks/: useTheme.ts
content/lists/: fruits.md  groceries.md
content/lists/groceries/: pharmacy.md
content/notes/: test-note2.md
content/notes/projects/rust/: lst.md
crates/lst-cli/: Cargo.toml
crates/lst-cli/src/: config.rs  lib.rs  main.rs
crates/lst-cli/src/cli/: commands.rs  mod.rs
crates/lst-cli/src/models/: list.rs  mod.rs
crates/lst-cli/src/storage/: markdown.rs  mod.rs  notes.rs
crates/lst-cli/wix/: main.wxs
crates/lst-core/: Cargo.toml
crates/lst-core/src/: commands.rs  config.rs  crypto.rs  lib.rs  theme.rs
crates/lst-core/src/models/: list.rs
crates/lst-core/src/storage/: markdown.rs  mod.rs  notes.rs
crates/lst-core/src/sync/: mod.rs
crates/lst-mcp/: Cargo.toml  TESTING.md  simple_test.sh  test_add_tool.sh  test_client.py
crates/lst-mcp/src/: handler.rs  main.rs  tests.rs  tools.rs
crates/lst-proto/: Cargo.toml
crates/lst-proto/src/: lib.rs
crates/lst-server/: Cargo.toml
crates/lst-server/src/: config.rs  main.rs  sync_db.rs  wordlist.rs
crates/lst-server/tests/: integration_tests.rs
crates/lst-syncd/: Cargo.toml
crates/lst-syncd/src/: config.rs  crypto.rs  database.rs  main.rs  sync.rs  trigger.rs  watcher.rs
docs/: INSTALL.md
docs/changes/: 2025-02-15-dependency-updates.md  2025-02-19-push-sync.md  2025-02-19-remove-glib-patch.md  2025-11-09-sync-path-normalization.md  2025-11-10-mobile-sync-key-path.md
examples/: config.toml  lst-with-custom-themes.toml  lst.toml
old/: SYNC_INTEGRATION_COMPLETE.md  lst_spec_0.1.excalidraw
old/20250622/: SPEC.md
scripts/: sync-smoke.sh
src/: .gitignore  config.rs  main.rs
src/cli/: commands.rs  mod.rs
src/models/: list.rs
src/server/: config.rs  main.rs
src/storage/: markdown.rs  mod.rs  notes.rs
systemd/: README.md  lst-server.service  lst-syncd.service
tests/: storage.rs
