[workspace]
version = "0.1.1"
members = [
  "crates/lst-core",
  "crates/lst-cli",
  "crates/lst-syncd",
  "crates/lst-server",
  "crates/lst-proto",
  "crates/lst-mcp",
  "apps/lst-desktop/src-tauri",
  "apps/lst-mobile/src-tauri",
]
resolver = "2"
package.repository = "https://github.com/WismutHansen/lst.git"

[workspace.dependencies]
# CLI
clap = { version = "4.5.3", features = ["derive"] }
colored = "2.1.0"
dialoguer = "0.11.0"
console = "0.15.8"
specta = { version = "2.0.0-rc.22" }
specta-typescript = { version = "*" }

# Storage & sync
serde = { version = "1.0.197", features = ["derive"] }
serde_yaml = "0.9.33"
serde_json = "1.0.114"
toml = "0.8.10"
dirs = "5.0.1"
uuid = { version = "1.7.0", features = ["v4", "v5", "serde"] }

# Error handling
anyhow = "1.0.81"
thiserror = "1.0.57"

# Utilities
chrono = { version = "0.4.34", features = ["serde"] }
regex = "1.10.4"
lazy_static = "1.4.0"
rand = "0.8.5"
axum = { version = "0.8.3", features = ["ws"] }
hyper = "1.6.0"
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
qrcode = "0.14.1"
image = "0.25.6"
base64 = "0.22.1"
jsonwebtoken = "9.3.1"
urlencoding = "2.1.3"
reqwest = { version = "0.11", features = ["json"] }
notify = "6.1.1"
automerge = { version = "0.6" }
rusqlite = { version = "0.32.1", features = ["bundled"] }
sha2 = "0.10"
hex = "0.4"
argon2 = "0.5"
chacha20poly1305 = { version = "0.10", features = ["std"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
