[package]
name = "lst-cli"
version = "0.1.0"
description = "Personal lists & notes app CLI"
authors = ["Tommy Falkowski"]
edition = "2021"

[lib]
name = "lst_cli"
path = "src/lib.rs"

[[bin]]
name = "lst"
path = "src/main.rs"

[dependencies]
# CLI
clap = { workspace = true }
colored = { workspace = true }
dialoguer = { workspace = true }
console = { workspace = true }

# Storage & sync
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
chrono = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }
rand = { workspace = true }

[features]
default = ["lists"]
lists = []
notes = []
posts = []
media = []