[package]
name = "lst-cli"
version = "0.1.1"
description = "Personal lists & notes app CLI"
authors = ["Tommy Falkowski"]
edition = "2021"
repository = "https://github.com/WismutHansen/lst.git"
homepage = "https://github.com/WismutHansen/lst"

[package.metadata.dist]
dist = true

[package.metadata.wix]
upgrade-guid = "9716A42E-9AB4-42EA-A66D-692ACFB16DAE"
path-guid = "36C7B5DE-4572-4FFD-847E-6E96F65C0524"
license = false
eula = false

[lib]
name = "lst_cli"
path = "src/lib.rs"

[[bin]]
name = "lst"
path = "src/main.rs"

[dependencies]
# CLI
clap = { workspace = true }
colored = { workspace = true }
dialoguer = { workspace = true }
console = { workspace = true }

# Storage & sync
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
chrono = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }
rand = { workspace = true }
rusqlite.workspace = true

[features]
default = ["lists"]
lists = []
notes = []
posts = []
media = []
