[package]
name = "lst-cli"
version = "0.1.3"
description = "Personal lists & notes app CLI"
authors = ["Tommy Falkowski"]
edition = "2021"
repository = "https://github.com/WismutHansen/lst.git"
homepage = "https://github.com/WismutHansen/lst"

[package.metadata.dist]
dist = true

[package.metadata.wix]
upgrade-guid = "9716A42E-9AB4-42EA-A66D-692ACFB16DAE"
path-guid = "36C7B5DE-4572-4FFD-847E-6E96F65C0524"
license = false
eula = false

[lib]
name = "lst_cli"
path = "src/lib.rs"

[[bin]]
name = "lst"
path = "src/main.rs"

[dependencies]
# Core functionality (conditionally enable tauri feature)
lst-core = { path = "../lst-core", version = "0.1.3" }

# CLI
clap = { workspace = true }
colored = { workspace = true }
dialoguer = { workspace = true }
console = { workspace = true }

# HTTP client (always needed for server commands)
reqwest = { workspace = true, features = ["json"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

# Tauri integration (optional - only for desktop app communication)
specta = { version = "2.0.0-rc.22", features = ["uuid", "chrono"], optional = true }
specta-typescript = { version = "0.0.9", optional = true }
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"], optional = true }

# Re-exported from lst-core for convenience
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

# Additional dependencies used directly in CLI commands
rusqlite = { workspace = true }
uuid = { workspace = true }
url = "2.5.0"
argon2 = { workspace = true }

[features]
default = ["lists", "gui"]
lists = []
notes = []
posts = []
media = []
gui = ["dep:specta", "dep:specta-typescript", "dep:tauri-specta", "lst-core/tauri"]
