[package]
name = "lst-core"
version = "0.3.0"
description = "Core functionality for lst todo list app"
authors = ["Tommy Falkowski"]
edition = "2021"
repository = "https://github.com/WismutHansen/lst.git"
homepage = "https://github.com/WismutHansen/lst"

[lib]
name = "lst_core"
path = "src/lib.rs"

[dependencies]
# Storage & sync
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
uuid = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
chrono = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }
rand = { workspace = true }
fuzzy-matcher = "0.3"
schemars = "0.8"
rusqlite.workspace = true
sha2 = "0.10"
hex = "0.4"
argon2 = { workspace = true }
chacha20poly1305 = { workspace = true }
base64 = { workspace = true }
automerge = { workspace = true }

[features]
default = ["lists"]
lists = []
notes = []
posts = []
media = []
tauri = ["dep:specta"]

[dependencies.specta]
version = "2.0.0-rc.22"
features = ["uuid", "chrono", "derive"]
optional = true
