[package]
name = "lst-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP server for lst todo list app"
authors = ["Tommy Falkowski"]
homepage = "https://github.com/WismutHansen/lst"

[package.metadata.dist]
dist = true

[dependencies]
rust-mcp-sdk = { version = "0.4", default-features = false, features = [
  "server",
  "macros",
  "hyper-server",
  "ssl",
  "2025_03_26",
] }

anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { version = "0.1" }
futures = { version = "0.3" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

lst-cli = { path = "../lst-cli", version = "0.1.3" }
