[package]
name = "lst-mcp"
version = "0.2.0"
edition = "2021"
description = "MCP server for lst todo list app"
authors = ["Tommy Falkowski"]
homepage = "https://github.com/WismutHansen/lst"

[package.metadata.dist]
dist = true

[dependencies]
rust-mcp-sdk = { version = "0.7", default-features = false, features = [
  "server",
  "macros",
  "stdio",
  "2025_06_18",
] }

anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { version = "0.1" }
futures = { version = "0.3" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

lst-core = { path = "../lst-core", version = "0.2.0" }

[dev-dependencies]
tempfile = "3.8"
mockito = "1.2"
rstest = "0.18"
