[package]
name = "lst-proto"
version = "--workspace"
description = "Shared types and protocol definitions for lst"
authors = ["Tommy Falkowski"]
edition = "2021"
repository = "https://github.com/WismutHansen/lst"
homepage = "https://github.com/WismutHansen/lst"

[package.metadata.dist]
dist = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
