[package]
name = "lst-server"
version = "0.1.0"
description = "Personal lists & notes app server"
authors = ["Tommy Falkowski"]
edition = "2021"

[[bin]]
name = "lst-server"
path = "src/main.rs"

[dependencies]
# CLI
clap = { workspace = true }

# Server framework
axum = { workspace = true }
hyper = { workspace = true }
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
jsonwebtoken = { workspace = true }
urlencoding = { workspace = true }
qrcode = { workspace = true }
image = { workspace = true }
rand = { workspace = true }
lettre = { workspace = true }
dirs = { workspace = true }

# Internal dependencies
lst-proto = { path = "../lst-proto" }

[dev-dependencies]
reqwest = { workspace = true }