[package]
name = "lst-server"
version = "--workspace"
description = "Personal lists & notes app server"
authors = ["Tommy Falkowski"]
edition = "2021"
homepage = "https://github.com/WismutHansen/lst"

[package.metadata.dist]
dist = false

[[bin]]
name = "lst-server"
path = "src/main.rs"

[dependencies]
# CLI
clap = { workspace = true }

# Server framework
axum = { workspace = true }
hyper = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
jsonwebtoken = { workspace = true }
urlencoding = { workspace = true }
qrcode = { workspace = true }
image = { workspace = true }
rand = { workspace = true }
lettre = { workspace = true }
dirs = { workspace = true }

# Internal dependencies
lst-proto = { path = "../lst-proto", version = "--workspace" }
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls", "chrono", "uuid"] }

[dev-dependencies]
reqwest = { workspace = true }
