[package]
name = "lst-server"
version = "0.2.0"
description = "Personal lists & notes app server"
authors = ["Tommy Falkowski"]
edition = "2021"
homepage = "https://github.com/WismutHansen/lst"

[package.metadata.dist]
dist = false

[[bin]]
name = "lst-server"
path = "src/main.rs"

[dependencies]
# CLI
clap = { workspace = true }

# Server framework
axum = { workspace = true }
hyper = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
base64 = { workspace = true }
jsonwebtoken = { workspace = true }
urlencoding = { workspace = true }
qrcode = { workspace = true }
image = { workspace = true }
rand = { workspace = true }
dirs = { workspace = true }
sha2 = { workspace = true }
argon2 = { workspace = true }
hex = { workspace = true }

# Internal dependencies
lst-core = { path = "../lst-core", version = "0.2.0" }
lst-proto = { path = "../lst-proto", version = "0.2.0" }
sqlx = { version = "0.8.6", features = [
  "sqlite",
  "runtime-tokio-rustls",
  "chrono",
  "uuid",
] }

[dev-dependencies]
reqwest = { workspace = true }
argon2 = { workspace = true }
