[package]
name = "lst-syncd"
version = "--workspace"
description = "Background sync daemon for lst - handles encrypted CRDT sync with remote servers"
authors = ["Tommy Falkowski"]
edition = "2021"
homepage = "https://github.com/WismutHansen/lst"

[package.metadata.dist]
dist = false

[[bin]]
name = "lst-syncd"
path = "src/main.rs"

[dependencies]
# CLI
clap = { workspace = true }

# Async runtime
tokio = { workspace = true }

# File watching
notify = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
automerge = { workspace = true }
rusqlite = { workspace = true }
sha2 = { workspace = true }
chacha20poly1305 = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }

# HTTP client
reqwest = { workspace = true }

# Encryption (for future CRDT encryption)
# ring = "0.17"

# Internal dependencies
lst-proto = { path = "../lst-proto", version = "--workspace" }
lst-cli = { path = "../lst-cli", version = "--workspace" }
hex = "0.4.3"
