[package]
name = "lst-desktop"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lst_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
window-vibrancy = "0.6"
serde = { workspace = true }
serde_json = { workspace = true }
specta = { workspace = true }
specta-typescript = { workspace = true }
tauri-specta = { version = "2.0.0-rc.21" }
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
chrono = { workspace = true }

# Internal dependencies
lst-proto = { path = "../../../crates/lst-proto", version = "0.2.0" }
lst-cli = { path = "../../../crates/lst-cli/", version = "0.2.0" }
lst-core = { path = "../../../crates/lst-core", version = "0.2.0" }

[target.'cfg(target_os = "linux")'.dependencies]
# Wayland support
wayland-client = "0.31"
wayland-protocols = { version = "0.31", features = ["client"] }
