[package]
name = "lst-mobile"
version = "0.1.3"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "lst_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", default-features = false, features = [] }
tauri-plugin-opener = "2"
window-vibrancy = "0.6"
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
automerge = { workspace = true }
base64 = { workspace = true }
chacha20poly1305 = { workspace = true }
dirs = { workspace = true }
futures-util = { workspace = true }
hex = { workspace = true }
notify = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
tokio-tungstenite = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
specta = { workspace = true }
specta-typescript = { workspace = true }
tauri-specta = { version = "2.0.0-rc.21" }
chrono = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
argon2 = { workspace = true }
keyring = "3.0"
lazy_static = "1.4"

# Internal dependencies
lst-proto = { path = "../../../crates/lst-proto", version = "0.1.3" }
lst-cli = { path = "../../../crates/lst-cli/", version = "0.1.3" }
lst-core = { path = "../../../crates/lst-core/", version = "0.1.3" }
